k8s/postgresql/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: zerohertzkr/fastapi-cookbook:v0.1.1
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: fastapi-prod-env-volume
              mountPath: /workspace/envs/prod.env
              subPath: prod.env
      volumes:
        - name: fastapi-prod-env-volume
          configMap:
            name: fastapi-env
            items:
              - key: prod.env
                path: prod.env
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  ports:
    - port: 8000
  selector:
    app: fastapi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fasapi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.zerohertz.xyz`)
      kind: Rule
      services:
        - name: fastapi
          port: 8000
  tls:
    certResolver: zerohertz-resolver
